# django-toastify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
django_toastify/: apps.py  conf.py
django_toastify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_toastify/static/django_toastify/: toast.css  toast.js
django_toastify/templates/django_toastify/: toast.html
django_toastify/templatetags/: toast_tags.py
